--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -952,3 +952,19 @@ pre.CodeMirror-line  > span > span.cm-string {
     max-width: 200px;
 }
 
+.mainGraphIql{
+  height : calc(100% - 60px);
+}
+
+.graphiql-container{
+  background-color: transparent;
+}
+
+.graphiql-un-styled, .graphiql-toolbar-button{
+  color:white !important;
+}
+
+
+.graphiql-container .graphiql-editors {
+  background-color: transparent;
+}
