--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -55,6 +55,11 @@ input.tdb__diff__original,
 .tdb__diff__original__subDocuments,
 .tdb__diff__original .tdb__markdown__view { 
     border: 1px solid #842029 !important;
+    border-radius: 4px;
+}
+
+div.choice_subdocument_title.tdb__diff__original__subDocuments {
+    padding: 10px !important;
 }
 
 /*.tdb__diff__changed_removed > input,
@@ -63,16 +68,16 @@ input.tdb__diff__original,
 }*/
 
 /** choice sub documents when choices have changed */
-.tdb__diff__original__bg {
+div.choice_subdocument_title.tdb__diff__original {
     border-radius: 6px;
     border: 1px solid #842029;
     padding: 10px;
 }
 
 /** choice sub documents highlight choice change */
-.tdb__diff__original__bg > div.panel-body > div.form-group > select,
-.tdb__diff__original__textrea > textarea,
-.tdb__diff__original__textrea > input {
+div.choice_subdocument_title.tdb__diff__original div.panel-body > div.form-group > select,
+div.choice_subdocument_title.tdb__diff__original textarea,
+div.choice_subdocument_title.tdb__diff__original input {
     background-color: #f8d7da !important;
     color: #842029 !important;
 }
@@ -127,11 +132,16 @@ input.tdb__diff__changed,
 .tdb__diff__changed .tdb__markdown__view,
 .tdb__diff__changed__subDocuments { 
     border: 1px solid #0f5132 !important;
+    border-radius: 4px;
+}
+
+div.choice_subdocument_title.tdb__diff__changed__subDocuments {
+    padding: 10px !important;
 }
 
 
 /** choice sub documents when choices have changed */
-.tdb__diff__changed__bg { 
+div.choice_subdocument_title.tdb__diff__changed { 
     border-radius: 6px;
     border: 1px solid #0f5132;
     padding: 10px;
@@ -142,11 +152,16 @@ input.tdb__diff__changed,
 }
 
 /** choice sub documents highlight choice change */
-.tdb__diff__changed__bg > div.panel-body > div.form-group > select,
-.tdb__diff__changed__textrea > textarea,
-.tdb__diff__changed__textrea > input {
+div.choice_subdocument_title.tdb__diff__changed div.panel-body > div.form-group > select,
+div.choice_subdocument_title.tdb__diff__changed textarea.form-control,
+div.choice_subdocument_title.tdb__diff__changed input {
     background-color: #d1e7dd !important;
     color: #0f5132 !important;
+}
+
+/** force choice sub docs select choice to be hidden in diff */
+.removed__choiceSubDocs + .panel.panel-default.panel-body {
+    opacity: 0;
 }
 
 .removed__label {
@@ -358,9 +373,11 @@ div.array-item div.control-label {
     visibility: hidden;
 }
 
+/** show labels of choice sub documents */
 /** display sub document labels for arrays */
 div.array-item div.tdb__subdocument__card label.control-label,
-div.array-item div.tdb__subdocument__card div.control-label {
+div.array-item div.tdb__subdocument__card div.control-label,
+div.array-item div.choice_subdocument_title label.control-label {
     visibility: initial;
 }
 
