--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -1106,6 +1106,9 @@ pre.CodeMirror-line  > span > span.cm-string {
   color: rgb(0, 188, 140)!important;
   margin-right: 20px;
 }
+.MuiInputBase-input{
+  min-height: 20px !important;
+}
 
 /*.qb-lite .group--drag-handler, .qb-lite .group--actions {
   transition: opacity 0.2s;
@@ -1121,4 +1124,14 @@ pre.CodeMirror-line  > span > span.cm-string {
 .accordion{
   background-color: #303030;
   --bs-accordion-bg:#303030;
+}
+
+.table__columns__component > .form-check-input{
+  min-height: 22px !important;
+  min-width: 22px;
+}
+
+
+.table__columns__component > .form-check-label{
+  margin-left: 10px;
 }
