--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -607,6 +607,8 @@ div.deleted * input {
     display: flex;
 }
 
+
+
 .tdb__frame__viewer div.form-group div.markdown_diff {
     display: block;
 }
@@ -690,4 +692,6 @@ form.rjsf div.control-label:after { content: "";  }
 form.rjsf label.form-label:after { content: "";  }
 form.rjsf label.control-label:after { content: "";  }
 
-
+.tdb__link__card__header {
+    color: #f9d891!important;
+}
