--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -11,6 +11,7 @@
 }
 
 
+
 .tdb__input,
 .tdb__input > input, 
 .tdb__input > select, 
@@ -376,6 +377,8 @@ legend {
     display: none !important;
 }
 
+/** document links */
+.tdb__document__link legend,
 /** display legend for geo/ choice sub document frames */
 .tdb__geo__input legend,
 .tdb__multipolygon__input legend,
@@ -386,6 +389,7 @@ legend {
 .tdb__array__frames span.control-label { 
     display: block !important; 
     font-size: 1rem;
+    color: white;
     /*margin-top: -38px;*/
 }
 
@@ -676,6 +680,7 @@ form.rjsf {
     /*grid-template-columns: max-content max-content;*/
     grid-gap:7px;
 }
+/*.tdb__document__link fieldset */
 form.rjsf span.control-label,
 form.rjsf div.control-label,
 form.rjsf label.form-label,
@@ -687,6 +692,7 @@ form.rjsf label.control-label {
   min-width: 10rem;
   width: 10rem;
 }
+
 form.rjsf span.control-label:after { content: "";  }
 form.rjsf div.control-label:after { content: "";  }
 form.rjsf label.form-label:after { content: "";  }
@@ -694,4 +700,28 @@ form.rjsf label.control-label:after { content: "";  }
 
 .tdb__link__card__header {
     color: #f9d891!important;
+}
+
+/** Document links */
+.tdb__document__link .panel  {
+    border: 1px solid #212529!important;
+    border-radius: 4px;
+    padding: 1rem;
+}
+
+/* this is to avoid description occuring twice in View mode for Document Links*/
+.tdb__view__document__link > fieldset > .field-description {
+    /*border: 1px solid green !important;*/
+    visibility: hidden;
+}
+
+/* hide anyof select from document links in edit and view mode */
+.tdb__edit__document__link .panel .form-group select.form-control,
+.tdb__view__document__link .panel .form-group select.form-control{
+    display: none !important;
+}
+
+/** display set/ list document link internal control-labels */
+.tdb__array__frames .tdb__document__link label.control-label div{
+    visibility: initial !important;
 }
