--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -401,9 +401,12 @@ div.array-item div.control-label {
 
 /** show labels of choice sub documents */
 /** display sub document labels for arrays */
+/** display document link unfolded properties for arrays */
 div.array-item div.tdb__subdocument__card label.control-label,
 div.array-item div.tdb__subdocument__card div.control-label,
-div.array-item div.choice_subdocument_title label.control-label {
+div.array-item div.choice_subdocument_title label.control-label,
+div.array-item div.tdb__document__link div.control-label,
+div.array-item div.tdb__document__link label.control-label {
     visibility: initial;
 }
 
@@ -704,9 +707,10 @@ form.rjsf label.control-label:after { content: "";  }
 
 /** Document links */
 .tdb__document__link .panel  {
-    border: 1px solid #212529!important;
+    /*border: 1px solid #212529!important;*/
+    border: 1px solid #6c7277!important;
     border-radius: 4px;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 /* this is to avoid description occuring twice in View mode for Document Links*/
