--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -400,6 +400,7 @@ div.array-item div.tdb__subdocument__card label.control-label,
 div.array-item div.tdb__subdocument__card div.control-label,
 div.array-item div.choice_subdocument_title label.control-label,
 div.array-item div.tdb__document__link div.control-label,
+/* one ofs and any sub docs of card */
 div.tdb__array__frames div.card label.control-label,
 div.array-item div.tdb__document__link label.control-label {
     visibility: initial;
