--- a/packages/tdb-react-components/src/css/less/layout/main.less
+++ b/packages/tdb-react-components/src/css/less/layout/main.less
@@ -85,7 +85,7 @@ td, th {
 	text-align: left
 }
 
-html {
+/*html {
   min-height: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-text-size-adjust: 100%;
@@ -93,9 +93,9 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
    width: 100vw
-}
+}*/
 
-body {
+/*body {
   position: relative;
   height: 100%;
   font-family: @font-family-base;
@@ -108,4 +108,4 @@ body {
   flex-direction: column;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-}
+}*/
