--- a/packages/tdb-react-table/src/style.css
+++ b/packages/tdb-react-table/src/style.css
@@ -5,3 +5,8 @@
     text-overflow: ellipsis;
     max-width: 200px;
 }
+
+.group {
+    background: transparent !important;
+    border: 1px solid #DCC896;
+}
